# fifa-top-speed

./: .gitignore  Dockerfile  README.md  app.py  charts.py  main.py  pyproject.toml  requirements.txt  top_speeds.csv
.github/workflows/: deploy.yml  refresh-data.yml
.tmp_dagster_home_w76_ydzb/history/: runs.db
.tmp_dagster_home_w76_ydzb/history/runs/: .db  index.db
.tmp_dagster_home_w76_ydzb/schedules/: schedules.db
data/: top_speeds.csv
docs/superpowers/plans/: 2026-07-02-liquid-glass-pipeline.md  2026-07-02-nextjs-vercel.md
docs/superpowers/specs/: 2026-07-02-liquid-glass-pipeline-design.md  2026-07-02-nextjs-vercel-design.md
infra/: main.tf
pipeline/: assets.py  definitions.py  parsing.py  storage.py
tests/: test_assets_json.py  test_definitions.py  test_parsing.py  test_storage.py
web/: package-lock.json  package.json  vitest.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: Explorer.tsx  FilterBar.tsx  GlassCard.tsx  Hero.tsx  KpiCards.tsx  MultiSelect.tsx  Section.tsx  Tooltip.tsx  useMeasure.ts
web/src/components/charts/: Dumbbell.tsx  Leaderboard.tsx  Ridgeline.tsx
web/src/data/: top_speeds.json
web/src/lib/: flags.ts  scale.ts  stats.ts  types.ts  units.ts
web/src/lib/__tests__/: data.test.ts  scale.test.ts  stats.test.ts
